--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <head>
         <title>Criar Sala - Rocket.Q</title>
+        <link rel="stylesheet" href="styles/global.css">
+        <link rel="stylesheet" href="styles/home.css">
     </head>
     <body>
       <header>
@@ -13,8 +15,10 @@
                 <h2>Entre como participante</h2>
                 <form action="">
                     <label class="sr-only" for="room-id">Codigo da Sala</label>
-                    <input type="text" id="room-id">
-                    <button>Entrar na Sala</button>
+                    <input type="number" id="room-id" placeholder="Código da Sala">
+                    <button>
+                       <img src="assets/enter-room.svg" alt="Entrar Na Sala">
+                        Entrar na Sala</button>
                 </form>
             </section>
             
@@ -26,6 +30,10 @@
            
             <section>
                 <h2>Crie sua própria sala de forma fácil</h2>
+                <a href="/create-room.html">
+                    <img src="assets/users .svg" alt="Criar Sala" srcset="">
+                    Criar Sala
+                </a>
             </section>
 
 
