--- a/home.html
+++ b/home.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
     <head>
         <title>Criar Sala - Rocket.Q</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+        <!-- View Port-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--CSS-->
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/home.css">
+
+        <!--FONTS-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
-      <header>
+        <div id="home" class="content">
+        <header>
           <img src="assets/logo.svg" alt="Rocket.Q Logo"/>
       </header>
+      <div id="bg">
+
+      </div>
       
       <main>
         <div class="container">
@@ -18,7 +33,8 @@
                     <input type="number" id="room-id" placeholder="Código da Sala">
                     <button>
                        <img src="assets/enter-room.svg" alt="Entrar Na Sala">
-                        Entrar na Sala</button>
+                        Entrar na Sala
+                    </button>
                 </form>
             </section>
             
@@ -39,5 +55,8 @@
 
         </div>    
       </main>
-    </body>
+ 
+
+        </div>
+   </body>
 </html>
