--- a/home.html
+++ b/home.html
@@ -21,7 +21,8 @@
           <img src="assets/logo.svg" alt="Rocket.Q Logo"/>
       </header>
       <div id="bg">
-
+        <div class="ball top"></div>
+        <div class="ball bottom"></div>
       </div>
       
       <main>
@@ -47,7 +48,7 @@
             <section>
                 <h2>Crie sua própria sala de forma fácil</h2>
                 <a href="/create-room.html" class="button outlined">
-                    <img src="assets/users .svg" alt="Criar Sala" srcset="">
+                    <img src="assets/users.svg" alt="Criar Sala" >
                     Criar Sala
                 </a>
             </section>
