--- a/room.html
+++ b/room.html
@@ -10,6 +10,7 @@
         <!--CSS-->
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/home.css">
+        <link rel="stylesheet" href="styles/room.css">
 
         <!--FONTS-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,8 +19,36 @@
     <body>
         <div id="room" class="content">
             <header>
-                <img src="assets/logo.svg" alt="Rocket.Q Logo"/>
+                <a href="#">
+                    <img src="assets/logo.svg" alt="Rocket.Q Logo"/>
+                </a>
+                <div class="buttons">
+                    <div class="button outlined">
+                        #323543
+                        <img src="assets/copy1.svg" alt="Copiar número da Sala" />
+                    </div>
+                    <a href="#" class="button">
+                        <img src="assets/users-white.svg" alt="Criar uma Sala"/>
+                        Criar Sala
+                    </a>
+                </div>
             </header>
+            <main>
+                <section id="question-form">
+                    <h2>Faça sua pergunta</h2>
+                    <form action="">
+                        <label class="sr-only" for-id="question">O que você quer perguntar?</label>
+                        <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
+                        <footer>
+                            <div>
+                                <img src="" alt="">
+                                Esta pergunta é anônima
+                            </div>
+                            <button>Enviar</button>
+                        </footer>
+                    </form>
+                </section>
+            </main>
         </div>
     </body>
 </html>
