--- a/room.html
+++ b/room.html
@@ -9,7 +9,6 @@
 
         <!--CSS-->
         <link rel="stylesheet" href="styles/global.css">
-        <link rel="stylesheet" href="styles/home.css">
         <link rel="stylesheet" href="styles/room.css">
 
         <!--FONTS-->
@@ -41,12 +40,40 @@
                         <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
                         <footer>
                             <div>
-                                <img src="" alt="">
+                                <img src="assets/lock.svg" alt="Cadeado">
                                 Esta pergunta é anônima
                             </div>
                             <button>Enviar</button>
                         </footer>
                     </form>
+                </section>
+                <section id="questions">
+                    <h2 class="sr-only">Perguntas da Comunidade</h2>
+                    <div class="questions">
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="assets/avatar.svg" alt="">
+                                </div>
+                                <div class="question">
+                                    <p>Qual a diferença entre const, var e let no Javascript?</p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <a href="#" class="check">
+                                    <img src="assets/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a>
+                                <a href="#" class="delete">
+                                    <img src="assets/trash.svg" alt="Excluir">
+                                    Excluir
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
+
+
                 </section>
             </main>
         </div>
