--- a/create-pass.html
+++ b/create-pass.html
@@ -33,7 +33,7 @@
                     <label class="sr-only" for="room-pass">Insira uma Senha</label>
                     <input type="password" id="room-pass" placeholder="Insira uma Senha":>
                     <button>
-                       <img src="assets/enter-room.svg" alt="Entrar Na Sala">
+                       <img src="assets/users-white.svg" alt="Entrar Na Sala">
                         Criar sala
                     </button>
                 </form>
