--- a/room.html
+++ b/room.html
@@ -10,6 +10,7 @@
         <!--CSS-->
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/room.css">
+        <link rel="stylesheet" href="styles/modal.css">
 
         <!--FONTS-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -144,5 +145,26 @@
                 </section>
             </main>
         </div>
+
+        <!-- Modal -->
+        <div class="modal-wrapper">
+            <div class="modal">
+                <h2>Excluir</h2>
+                <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+                <form action="">
+                    <label class="sr-only" for-id="password">Digite sua senha de administrador.</label>
+                    <input type="password" name="password" placeholder="Digite sua Senha">
+
+                    <div class="buttons">
+                        <div class="button">Cancelar</div>
+                        <button>Sim, excluir</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+
+
     </body>
 </html>
