--- a/room.html
+++ b/room.html
@@ -149,7 +149,7 @@
         <!-- Modal -->
         <div class="modal-wrapper">
             <div class="modal">
-                <h2>Excluir</h2>
+                <h2>Excluir pergunta</h2>
                 <p>Tem certeza que você deseja excluir esta pergunta?</p>
 
                 <form action="">
@@ -157,8 +157,8 @@
                     <input type="password" name="password" placeholder="Digite sua Senha">
 
                     <div class="buttons">
-                        <div class="button">Cancelar</div>
-                        <button>Sim, excluir</button>
+                        <div class="button grey">Cancelar</div>
+                        <button class="red">Sim, excluir</button>
                     </div>
 
                 </form>
